--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<link rel="icon" href="icon.png">
 		<meta name="description" content="Buy ore when the price is low, sell it when the price is high, and make money.">
 		<title>ore</title>
 	</head>
